# rento

./: .env  .gitignore  .mcp.json.sample  CLAUDE.md  INSTALL_CODEGEN.md  README.md  app.json  babel.config.js  codegen.yml  eas.json  index.ts  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
.claude/: settings.json
.claude/agents/: analyst.md  architect.md  convex-data-scientist.md  dev.md  i18n-localization-engineer.md  i18n.md  japan-realestate-compliance-auditor.md  legal-compliance-auditor.md  market-research-analyst.md  pm.md  product-manager.md  senior-backend-engineer.md  senior-frontend-engineer.md  sm.md  ssm.md  startup-gtm-strategist.md  technical-architect.md
.claude/assets/: bizdev_checklist.md  feature_list.md  (+2 more)
.claude/docs/: brief.md  (+6 more)
.claude/hooks/: notification.py  post_tool_use.py  pre_compact.py  pre_tool_use.py  pyproject.toml  stop.py  subagent_stop.py  user_prompt_submit.py
.claude/hooks/utils/llm/: anth.py  oai.py  ollama.py
.claude/hooks/utils/tts/: elevenlabs_tts.py  openai_tts.py  pyttsx3_tts.py
.claude/hooks/voice_notifications/: handler.py  sound_mappings.json
.github/: MIGRATIONS_WORKFLOW.md
android/: sentry.properties
app/: _layout.tsx
client/: package.json  tsconfig.json
components/: Header.tsx  ProfileHeader.tsx  SignInWith.tsx
convex/: auth.config.ts  consent.ts  http.ts  profiles.ts  schema.ts  translations.ts  users.ts
infrastructure/: README.md
ios/: Podfile
scripts/: build-client.sh  build-server.sh  codegen.sh
server/: README.md  build-server.sh  index.ts  package.json  tsconfig.json
(+196 files in other folders)
